--- a/src/main/resources/tezfx/view/components/TaskRow.fxml
+++ b/src/main/resources/tezfx/view/components/TaskRow.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -10,8 +11,11 @@
       xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="tezfx.controller.TaskRowController">
     <padding>
-        <Insets bottom="10" left="20" right="20" top="10" />
+        <Insets  />
     </padding>
+
+    <CheckBox fx:id="doneCheck" onAction="#onDoneToggle" styleClass="task-check" />
+    <FontIcon fx:id="inProgressIcon" iconLiteral="mdi2c-clock-outline" iconSize="18" onMouseClicked="#onInProgressClick" styleClass="gray-icon" />
 
     <VBox spacing="2" HBox.hgrow="ALWAYS">
         <Label fx:id="taskTitle" style="-fx-font-weight: bold; -fx-font-size: 14;" text="Homepage Hero Section" />
