--- a/src/main/resources/tezfx/view/tasks.fxml
+++ b/src/main/resources/tezfx/view/tasks.fxml
@@ -26,7 +26,7 @@
             <Region HBox.hgrow="ALWAYS" />
             <HBox alignment="CENTER_RIGHT" spacing="8.0">
                 <children>
-                    <TextField fx:id="searchField" prefWidth="240.0" promptText="Search tasks..." styleClass="tasks-toolbar-search" />
+                    <TextField fx:id="ssearchField" prefWidth="240.0" promptText="Search tasks..." styleClass="tasks-toolbar-search" />
                     <Button styleClass="btn-secondary" text="Filter">
                         <graphic>
                             <FontIcon iconLiteral="mdi2f-filter-outline" iconSize="16" />
