--- a/src/main/resources/Profile/Profile1.fxml
+++ b/src/main/resources/Profile/Profile1.fxml
@@ -37,8 +37,8 @@
 
                         <HBox alignment="CENTER" spacing="10.0" style="-fx-cursor: hand;">
                             <children>
-                                <Circle fill="#fbbf24" radius="16.0" />
-                                <Label style="-fx-font-weight: bold; -fx-text-fill: #374151;" text="Alex" />
+                                <Circle fx:id="topAvatar" fill="#fbbf24" radius="16.0" />
+                                <Label  fx:id="topName" style="-fx-font-weight: bold; -fx-text-fill: #374151;" text="Alex" />
                                 <FontIcon iconLiteral="fth-chevron-down" iconColor="#6B7280" iconSize="14" />
                             </children>
                         </HBox>
